# OpenDesign

./: .env.example  .gitignore  CLAUDE.md  GPT.md  LICENSE  README.md  pyproject.toml
assets/deck_templates/: academic-editorial.pptx
assets/design-systems/: claymorphism.css  editorial.css  glassmorphism.css  liquid-glass.css  minimalist.css  neubrutalism.css
assets/fonts/: LICENSES.md
assets/marketing/: longcatdesign-brief.md  opendesign-brief.md
design_agent/: cli.py  planner.py  runner.py  smoke.py
design_agent/tools/: critique_tool.py  fetch_brand_asset.py  finalize.py
design_agent/util/: logging.py
docs/: ARCHITECTURE.md  COMPETITORS.md  DATA-CONTRACT.md  DECISIONS.md  GOTCHAS.md  IMPLEMENTATION_v2.8.md  README.md  ROADMAP.md  V1-MVP-PLAN.md  VISION.md  WORKFLOWS.md  opendesign-pdf-flow.html
longcat_design/: apply_edits.py  chat.py  cli.py  config.py  critic.py  planner.py  runner.py  schema.py  session.py  smoke.py
longcat_design/tools/: __init__.py  _contract.py  _deck_preview.py  _font_embed.py  composite.py  critique_tool.py  (+9 more)
open_design/: apply_edits.py  chat.py  cli.py  config.py  critic.py  image_backend.py  llm_backend.py  planner.py  runner.py  schema.py  session.py  smoke.py
prompts/: claim_graph_extractor.md  critic-deck.md  critic-landing.md  critic.md  critic_vision_deck.md  critic_vision_landing.md  critic_vision_poster.md  planner.md  prompt_enhancer.md
scripts/: build_template.py  check_critic_alibaba_format.py  check_image_default.py  export_sft_jsonl.py  make_diagrams.py  probe_image_models.py  spike_pdf_figures.py
(+44 files in other folders)
